# binny-buddy-server

./: .gitignore  Dockerfile  docker-compose.prod.yaml  docker-compose.yaml  env  manage.py  pyproject.toml  run.sh
binny_buddy/apps/core/: apps.py  dto.py  models.py  schema.py  services.py  utils.py  views.py
binny_buddy/apps/core/migrations/: 0001_initial.py  0002_file_user.py  0003_alter_binny_collection_alter_binnycollection_user_and_more.py
binny_buddy/core/: apps.py  client.py  models.py
binny_buddy/django_project/: asgi.py  settings.py  urls.py  wsgi.py
